--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ body.bedtime .wpm-improvement { background: #1a3a2a; border-color: #4a8a5a; colo
       <button class="btn-main" id="btn-generate">✨ Make My Story!</button>
       <div class="or-divider"><span>or</span></div>
       <button class="btn-main btn-coral" id="btn-scan-page" style="font-size:1rem;">📸 Scan My Page</button>
-      <input type="file" id="scan-file-input" accept="image/*" capture="environment" style="display:none;">
+      <input type="file" id="scan-file-input" accept="image/*" style="display:none;">
       <div class="or-divider"><span>or</span></div>
       <button class="btn-main btn-purple" id="btn-together-start">📖 Read Together</button>
     </div>
