--- a/index.html
+++ b/index.html
@@ -2609,8 +2609,9 @@ document.getElementById('spelling-file-input').addEventListener('change', async 
         <div style="font-size:2.5rem;margin-bottom:8px;">😕</div>
         <p style="font-weight:800;color:#e74c3c;font-size:1rem;">Couldn't read those words</p>
         <p style="font-weight:700;color:var(--muted);font-size:0.85rem;margin-top:6px;">Try again with a clearer photo of the spelling list.</p>
-        <button class="btn-main" onclick="triggerSpellingUpload()" style="margin-top:16px;font-size:0.95rem;background:linear-gradient(135deg, #FF8C42, #FF6B6B);">📸 Try Again</button>
+        <button class="btn-main" id="btn-spelling-retry-error" style="margin-top:16px;font-size:0.95rem;background:linear-gradient(135deg, #FF8C42, #FF6B6B);">📸 Try Again</button>
       </div>`;
+    document.getElementById('btn-spelling-retry-error').addEventListener('click', triggerSpellingUpload);
   }
 });
 
